--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -2,7 +2,7 @@
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
-  line-height: 100%;
+  line-height: 1.11;
   color: #ffff;
   text-decoration: none;
   padding: 14px 0 8px;
