--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,5 +4,5 @@
   justify-content: space-between;
   align-items: center;
   padding: 16px 16px 48px;
-  font-family: 'inter';
+  font-family: 'Inter';
 }
