--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,8 +1,7 @@
-.lead {
+.intro {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  padding: 0 16px 64px;
   font-family: 'Inter';
   color: white;
-  padding: 0 0 64px;
 }
