--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -4,6 +4,6 @@
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
-  line-height: 100%;
+  line-height: 1.25;
   text-align: center;
 }
