--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -2,7 +2,7 @@
   font-style: normal;
   font-weight: 900;
   font-size: 40px;
-  line-height: 100%;
+  line-height: 1.1;
   text-align: center;
   padding: 0 16px 16px;
   margin: 0;
