--- a/blocks/pages/index.css
+++ b/blocks/pages/index.css
@@ -1,12 +1,18 @@
 @import url('../../vendor/normalize.css');
-@import url('../../InterWeb/inter.css');
+@import url('../../inter/inter.css');
 @import url('../page/page.css');
 @import url('../header/header.css');
 @import url('../header/__logo/header__logo.css');
 @import url('../header/__links/header__links.css');
 @import url('../header/__lang-link/header__lang-link.css');
+@import url('../header/__lang-link/_underline/header__lang-link_underline_on.css');
 @import url('../lead/lead.css');
 @import url('../lead/__title/lead__title.css');
 @import url('../lead/__subtitle/lead__subtitle.css');
 @import url('../lead/__image/lead__image.css');
 @import url('../lead/__caption/lead__caption.css');
+@import url('../intro/intro.css');
+@import url('../intro/__title/intro__title.css');
+@import url('../intro/__text/intro__text.css');
+@import url('../intro/__list/intro__list.css');
+@import url('../intro/__number/intro__number.css');
