--- a/blocks/pages/index.css
+++ b/blocks/pages/index.css
@@ -5,7 +5,7 @@
 @import url('../header/__logo/header__logo.css');
 @import url('../header/__links/header__links.css');
 @import url('../header/__lang-link/header__lang-link.css');
-@import url('../header/__lang-link/_underline/header__lang-link_underline_on.css');
+@import url('../header/__lang-link/_active/header__lang-link_active.css');
 @import url('../lead/lead.css');
 @import url('../lead/__title/lead__title.css');
 @import url('../lead/__subtitle/lead__subtitle.css');
@@ -16,3 +16,22 @@
 @import url('../intro/__text/intro__text.css');
 @import url('../intro/__list/intro__list.css');
 @import url('../intro/__number/intro__number.css');
+@import url('../photo-grid/photo-grid.css');
+@import url('../photo-grid/__item/photo-grid__item.css');
+@import url('../places/places.css');
+@import url('../place/place.css');
+@import url('../place/__title/place__title.css');
+@import url('../place/__website/place__website.css');
+@import url('../place/__url-heading/place__url-heading.css');
+@import url('../place/__link/place__link.css');
+@import url('../place/__image/place__image.css');
+@import url('../place/__paragraph/place__paragraph.css');
+@import url('../cover/cover.css');
+@import url('../cover/__title/cover__title.css');
+@import url('../cover/__subtitle/cover__subtitle.css');
+@import url('../cover/__overlay/cover__overlay.css');
+@import url('../cover/__background/cover__background.css');
+@import url('../footer/footer.css');
+@import url('../footer/__links/footer__links.css');
+@import url('../footer/__link/footer__link.css');
+@import url('../footer/__copyright/footer__copyright.css');
