--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -3,7 +3,6 @@
   font-size: 32px;
   line-height: 1.09;
   text-align: center;
-  margin: 0;
-  padding: 33px 16px 0;
-  z-index: 1;
+  margin: 0 0 16px;
+  white-space: pre-line;
 }
