--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,12 +1,8 @@
 .place__paragraph {
   margin: 0;
-  padding: 0 16px 25px;
+  padding: 0 16px;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.63;
-}
-
-.place__paragraph:last-of-type {
-  padding-bottom: 0;
 }
