--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -5,5 +5,11 @@
   line-height: 1.09;
   padding-bottom: 40px;
   margin: 0;
+}
 
+@media(min-width: 768px) {
+  .intro__title {
+    font-size: 54px;
+    line-height: 1.07;
+  }
 }
