--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -6,4 +6,29 @@
   text-align: center;
   padding: 0 16px 16px;
   margin: 0;
+  white-space: pre-line;
+}
+
+@media(min-width: 768px) {
+  .lead__title {
+    font-size: 96px;
+    line-height: 1.04;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-bottom: 32px;
+  }
+}
+
+@media(min-width: 1024px) {
+  .lead__title {
+    padding-right: 104px;
+    padding-left: 104px;
+  }
+}
+
+@media(min-width: 1280px) {
+  .lead__title {
+    padding-right: 132px;
+    padding-left: 132px;
+  }
 }
