--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -4,3 +4,10 @@
   row-gap: 12px;
   padding: 0 16px;
 }
+
+@media(min-width: 768px) {
+  .place__website {
+    padding: 0;
+    justify-content: end;
+  }
+}
