--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,8 +1,17 @@
 .cover__title {
+  font-style: normal;
   font-weight: 900;
   font-size: 32px;
   line-height: 1.09;
   text-align: center;
-  margin: 0 0 16px;
+  margin: 0;
   white-space: pre-line;
+}
+
+
+@media(min-width: 768px) {
+  .cover__title {
+    font-size: 72px;
+    line-height: 1.06;
+  }
 }
