--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,5 +1,11 @@
 .cover {
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
   color: #FFFFFF;
 }
 
+@media(min-width: 1280px) {
+  .cover {
+    padding-left: 48px;
+    padding-right: 48px;
+  }
+}
