--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -5,3 +5,10 @@
   font-size: 14px;
   line-height: 1;
 }
+
+@media(min-width: 768px) {
+  .footer__copyright {
+    font-size: 14px;
+    line-height: 1.14;
+  }
+}
