--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -11,3 +11,10 @@
   opacity: .8;
   transition: opacity .3s ease-in-out;
 }
+
+@media(min-width: 768px) {
+  .footer__link {
+    font-size: 16px;
+    line-height: 1.12;
+  }
+}
