--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -4,5 +4,12 @@
   gap: 32px;
   list-style: none;
   margin: 0;
-  padding: 0 0 48px;
+  padding: 0;
+}
+
+@media(min-width: 768px) {
+  .footer__links {
+    flex-direction: row;
+    gap: 18px;
+  }
 }
