--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -3,7 +3,16 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 1.11;
-  color: #ffff;
   text-decoration: none;
+  color: inherit;
   padding: 14px 0 8px;
+}
+
+@media(min-width: 768px) {
+  .header__lang-link {
+    font-size: 24px;
+    line-height: 1.17;
+    padding-top: 18px;
+    padding-bottom: 6px;
+  }
 }
