--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,29 @@
 .header {
   display: flex;
-  gap: 84px;
   justify-content: space-between;
   align-items: center;
   padding: 16px 16px 48px;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  color: #ffff;
+}
+
+@media(min-width: 768px) {
+  .header {
+    padding-top: 28px;
+    padding-right: 24px;
+    padding-left: 24px;
+  }
+}
+
+@media(min-width: 1024px) {
+  .header {
+    padding-right: 48px;
+    padding-left: 48px;
+  }
+}
+
+@media(min-width: 1280px) {
+  .header {
+    padding-bottom: 56px;
+  }
 }
