--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -5,3 +5,10 @@
   line-height: 1.63;
   padding-bottom: 34px;
 }
+
+@media(min-width: 768px) {
+  .intro__text {
+    font-size: 16px;
+    line-height: 1.63;
+  }
+}
