--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,6 +2,29 @@
   display: flex;
   flex-direction: column;
   padding: 0 16px 64px;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
   color: white;
+}
+
+@media(min-width: 768px) {
+  .intro {
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-bottom: 88px;
+  }
+}
+
+@media(min-width: 1024px) {
+  .intro {
+    padding-right: 286px;
+    padding-left: 48px;
+    padding-bottom: 92px;
+  }
+}
+
+@media(min-width: 1280px) {
+  .intro {
+    padding-right: 442px;
+    padding-left: 148px;
+  }
 }
