--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -6,4 +6,30 @@
   font-size: 16px;
   line-height: 1.25;
   text-align: center;
+  white-space: pre-line;
+}
+
+@media(min-width: 768px) {
+  .lead__subtitle {
+    font-size: 30px;
+    line-height: 1.2;
+    padding-left: 64px;
+    padding-right: 64px;
+    padding-bottom: 56px;
+  }
+}
+
+@media(min-width: 1024px) {
+  .lead__subtitle {
+    padding-right: 144px;
+    padding-left: 144px;
+  }
+}
+
+@media(min-width: 1280px) {
+  .lead__subtitle {
+    padding-right: 172px;
+    padding-left: 172px;
+    padding-bottom: 64px;
+  }
 }
