--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -2,7 +2,28 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: 'Inter';
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
   color: white;
   padding: 0 0 64px;
+}
+
+@media(min-width: 768px) {
+  .lead {
+    padding-bottom: 88px;
+  }
+}
+
+@media(min-width: 1024px) {
+  .lead {
+    padding-right: 48px;
+    padding-left: 48px;
+    padding-bottom: 92px;
+  }
+}
+
+@media(min-width: 1280px) {
+  .lead {
+    padding-right: 148px;
+    padding-left: 148px;
+  }
 }
