--- a/blocks/place/__paragraph-container/place__paragraph-container.css
+++ b/blocks/place/__paragraph-container/place__paragraph-container.css
@@ -3,3 +3,9 @@
   flex-direction: column;
   row-gap: 25px;
 }
+
+@media(min-width: 1024px) {
+  .place__paragraph-container {
+    row-gap: 27px;
+  }
+}
