--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -6,3 +6,18 @@
   margin: 0;
   padding: 0 16px;
 }
+
+@media(min-width: 768px) {
+  .place__title {
+    font-size: 42px;
+    white-space: pre-line;
+    padding: 0;
+  }
+}
+
+@media(min-width: 1024px) {
+  .place__title {
+    font-size: 72px;
+    line-height: 1.06;
+  }
+}
