--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -4,3 +4,29 @@
   flex-direction: column;
   row-gap: 32px;
 }
+
+@media(min-width: 768px) {
+  .place {
+    display: grid;
+    grid-template-columns: minmax(340px, 1fr) minmax(min-content, max-content);
+    grid-template-rows: minmax(min-content, max-content) minmax(340px, 1fr);
+    row-gap: 48px;
+    column-gap: 28px;
+  }
+}
+
+@media(min-width: 1024px) {
+  .place {
+    grid-template-columns: minmax(440px, 1fr) minmax(min-content, max-content);
+    grid-template-rows: minmax(min-content, max-content) minmax(440px, 1fr);
+    column-gap: 32px;
+  }
+}
+
+@media(min-width: 1280px) {
+  .place {
+    grid-template-columns: minmax(460px, 1fr) minmax(min-content, max-content);
+    grid-template-rows: minmax(min-content, max-content) minmax(460px, 1fr);
+    column-gap: 40px;
+  }
+}
