--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,7 +1,32 @@
 .places {
 padding: 0 0 66px;
-font-family: 'Inter';
+font-family: 'Inter', Arial, Helvetica, sans-serif;
 display: flex;
 flex-direction: column;
 row-gap: 50px;
+}
+
+@media(min-width: 768px) {
+  .places {
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-bottom: 90px;
+    row-gap: 73px;
+  }
+}
+
+@media(min-width: 1024px) {
+  .places {
+    padding-left: 48px;
+    padding-right: 48px;
+    padding-bottom: 92px;
+    gap: 80px;
+  }
+}
+
+@media(min-width: 1280px) {
+  .places {
+    padding-left: 148px;
+    padding-right: 148px;
+  }
 }
