--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -7,7 +7,8 @@
   gap: 16px;
   text-decoration: none;
   background-image: url('../../../images/cover-trains.jpg');
-  background-size: 100% 100%;
+  background-size: cover;
+  background-position: center;
   color: inherit;
   cursor: pointer;
   z-index: 1;
@@ -31,15 +32,9 @@
   opacity: .8;
 }
 
-@media(min-width: 425px) {
-  .cover__link {
-    min-height: 300px;
-  }
-}
-
 @media(min-width: 768px) {
   .cover__link {
-    min-height: 480px;
+    max-height: 480px;
     padding: 115px 104px;
     gap: 32px;
   }
@@ -47,14 +42,14 @@
 
 @media(min-width: 1024px) {
   .cover__link {
-    min-height: 640px;
+    max-height: 640px;
     padding: 232px 195px;
   }
 }
 
 @media(min-width: 1280px) {
   .cover__link {
-    min-height: 740px;
+    max-height: 740px;
     padding: 245px 312px;
   }
 }
