--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -5,13 +5,14 @@
   line-height: 1.14;
   text-align: center;
   margin: 0;
-  white-space: pre-line;
+  max-width: 288px;
 }
 
 @media(min-width: 768px) {
   .cover__subtitle {
     font-size: 18px;
     line-height: 1.22;
+    max-width: 360px;
   }
 }
 
