--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -8,6 +8,11 @@
   padding: 14px 0 8px;
 }
 
+.header__lang-link:hover {
+  opacity: .8;
+  transition: opacity .3s ease-in-out;
+}
+
 @media(min-width: 768px) {
   .header__lang-link {
     font-size: 24px;
