--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   font-style: normal;
-  font-weight: 700;
+  font-weight: bold;
   font-size: 12px;
   line-height: 1.5;
 }
