--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -4,11 +4,5 @@
   font-size: 16px;
   line-height: 1.63;
   padding-bottom: 34px;
-}
-
-@media(min-width: 768px) {
-  .intro__text {
-    font-size: 16px;
-    line-height: 1.63;
-  }
+  margin: 0;
 }
