--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -6,7 +6,7 @@
   font-size: 16px;
   line-height: 1.25;
   text-align: center;
-  white-space: pre-line;
+  max-width: 288px;
 }
 
 @media(min-width: 768px) {
@@ -16,6 +16,7 @@
     padding-left: 64px;
     padding-right: 64px;
     padding-bottom: 56px;
+    max-width: 640px;
   }
 }
 
