--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -6,7 +6,7 @@
   text-align: center;
   padding: 0 16px 16px;
   margin: 0;
-  white-space: pre-line;
+  max-width: 288px;
 }
 
 @media(min-width: 768px) {
@@ -16,6 +16,7 @@
     padding-left: 24px;
     padding-right: 24px;
     padding-bottom: 32px;
+    max-width: 720px;
   }
 }
 
