--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,4 +2,6 @@
   background-color:  #2A2C2F;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
+  max-width: 1280px;
+  margin: 0 auto;
 }
