--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -10,7 +10,7 @@
 @media(min-width: 768px) {
   .place__title {
     font-size: 42px;
-    white-space: pre-line;
+    max-width: 340px;
     padding: 0;
   }
 }
@@ -19,5 +19,6 @@
   .place__title {
     font-size: 72px;
     line-height: 1.06;
+    max-width: 440px;
   }
 }
