--- a/blocks/photo-grid/__items/photo-grid__items.css
+++ b/blocks/photo-grid/__items/photo-grid__items.css
@@ -10,24 +10,24 @@
 
 @media(min-width: 768px) {
   .photo-grid__items {
-    grid-template-columns: repeat(auto-fit, minmax(352, 1fr));
-    grid-template-rows: repeat(auto-fit, minmax(264, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(352px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(264px, 1fr));
     gap: 16px;
   }
 }
 
 @media(min-width: 1024px) {
   .photo-grid__items {
-    grid-template-columns: repeat(auto-fit, minmax(300, 1fr));
-    grid-template-rows: repeat(auto-fit, minmax(225, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(225px, 1fr));
     gap: 16px;
   }
 }
 
 @media(min-width: 1280px) {
   .photo-grid__items {
-    grid-template-columns: repeat(auto-fit, minmax(284, 1fr));
-    grid-template-rows: repeat(auto-fit, minmax(213, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(213px, 1fr));
     gap: 16px;
   }
 }
